# tree-sitter-cgsql

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-cgsql.h  tree-sitter-cgsql.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_cgsql/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterCgsqlTests/: TreeSitterCgsqlTests.swift
prebuilt/: highlights.scm  tree-sitter-cgsql.wasm  tree-sitter-cql.wasm
queries/: highlights.scm
