[package]
name = "tree-sitter-cgsql"
description = "For the CQL Language in the CG/SQL Author's Cut"
version = "0.1.0"
authors = ["Rico Mariani <ricomariani@outlook.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "cgsql"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/ricomariani/cg-sql-author"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
